feat: add climing history feature